# splinart

./: .gitignore  .readthedocs.yaml  .release-please-manifest.json  CHANGELOG.md  pyproject.toml  pyproject_v0.toml  readme.md  release-please-config.json
.github/workflows/: ci.yml  publish.yml
doc/: conf.py
notebooks/: circle.md
recipes/: meta.yaml
splinart/: compute.py  version.py
splinart/scripts/: cli_splinart.py
splinart/spline/: splint.py
